...
    <string name="chat_day_yesterday">Yesterday</string>
    <string name="chat_composer_placeholder">Message</string>
    <string name="chat_composer_send">Send</string>
    <string name="chat_composer_tools_open">Open composer tools</string>
    <string name="chat_composer_tools_close">Close composer tools</string>
    <string name="chat_composer_emoji">Insert emoji</string>
    <string name="chat_composer_emoji_close">Close emoji picker</string>
    <string name="chat_composer_replying_to">Replying to %1$s</string>
    <string name="chat_composer_cancel_reply">Cancel reply</string>
    <string name="chat_composer_attachment">Add attachment</string>
    <string name="voice_record">Record voice message</string>
    <string name="voice_stop_recording">Stop recording</string>
    <string name="upload_add_title">Share something</string>
...
